--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,4 @@
 body {
-    font-family: "Lato", sans-serif;
-    margin: 0;
-    background-color: #F7F7F7;
 }
 
 .header {
@@ -24,9 +21,26 @@ body {
     margin: 0 auto;
 }
 
+.header-title_black {
+    padding: 15px;
+    color: #000000;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto;
+}
+
 .header-description {
     color: #CFCFCF;
     margin: 4px auto;
+    text-align: center;
+    max-width: 384px;
+}
+
+.header-description_black {
+    color: #000000;
+    margin: 4px auto;
+    font-size: 16px;
     text-align: center;
     max-width: 384px;
 }
