--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,11 @@ body {
     text-align: center;
 }
 
+.logo {
+    font-size: 48px;
+    margin: 0 auto;
+    text-align: center;
+}
 .header-title {
     color: #FFFFFF;
     font-size: 48px;
