--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Flask-Dash Example</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link type="text/css" href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet">
-</head>
-<body>
-    <div class="header">
-      <a href="#default" class="logo">CompanyLogo</a>
-      <div class="header-right">
-        <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-    </div>
-
-    <iframe src="{{ url_for('dash_page') }}" width="100%" height="900"></iframe>
-</body>
-</html>
+{% extends 'head.html'%}
+{% block content %}
+{{ super() }}
+    <iframe src="{{ url_for('dash_page') }}" width="100%" height="900" style="border: none;"></iframe>
+{% endblock %}
