--- a/templates/head.html
+++ b/templates/head.html
@@ -16,9 +16,9 @@
         </div>
 
       <div class="header-right">
-        <a class="active" href="/statisticsPage">Статистика</a>
-        <a href="/FamiliesNewsPage">Аналитика</a>
-        <a href="/FamiliesNewsPage">О инструменте</a>
+        <a class="active" href="/statistics">Статистика</a>
+        <a href="/newsPage">Семейства</a>
+        <a href="/InfoPage">О инструменте</a>
       </div>
     </div>
 {% block content -%}
