--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -1,6 +1,6 @@
 {% extends 'head.html'%}
 {% block content %}
 {{ super() }}
-<iframe src="{{ url_for('mainFraim') }}" width="100%" height="900" style="border: none;"></iframe>
+<iframe src="{{ url_for('mainFraim') }}" width="100%"  style="border: none; height: 100vh;"></iframe>
 <!--Content ends-->
 {% endblock %}
