--- a/templates/Families.html
+++ b/templates/Families.html
@@ -1,5 +1,5 @@
 {% extends 'head.html'%}
 {% block content %}
 {{ super() }}
-    <iframe src="{{ url_for('FamiliesNewsPage') }}" width="100%" height="900" style="border: none;"></iframe>
+    <iframe src="{{ url_for('FamiliesPage') }}" width="100%" height="900" style="border: none; height: 100vh;"></iframe>
 {% endblock %}
