--- a/static/css/style.css
+++ b/static/css/style.css
@@ -49,6 +49,22 @@
     height: 20px;
     width: 130px;
 }
+.hero-area {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .hero-area h1 {
+    font-size: 60px;
+    font-weight: bold;
+    padding-bottom: 19px;
+    margin-top: 30px;
+    line-height: 1.2; }
+  .hero-area p {
+    font-size: 20px;
+    line-height: 1.3; }
+  .hero-area .btn-main {
+    margin-top: 30px; }
 
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
